tests/NormalTests/paczka1/fuzzy1/67122679.err
Error in line 3: 5kmmmM3sg S293 93,5
Error in line 6: gkzXOnW A549 77,4
Error in line 8: YkvIl S792 81,3
Error in line 12: YkvIl S199 78,0
Error in line 9: gkzXOnW S199 69,1
Error in line 20: gkzXOnW A549 62,8
Error in line 21: 5kmmmM3sg S792 35,0
Error in line 26: Ts9W0JNtc A549 67,0
Error in line 30: YkvIl S293 54,6
Error in line 38: YkvIl S792 74,7
